Additional features: - You can now delete a previously saved configuration - You can now save the history of the configuration files automatically by passing "ON" history parameters in exe.config

--- a/ShortcutCreator_v2/App.config
+++ b/ShortcutCreator_v2/App.config
@@ -5,5 +5,6 @@
     </startup>
 	<appSettings>
 		<add key="destinationShortcutsPath" value="C:\Users\dcappabianca\Music"/>
+		<add key="history" value="ON"/>
 	</appSettings>
 </configuration>
